--- a/prometheus-configmap.yaml
+++ b/prometheus-configmap.yaml
@@ -15,7 +15,7 @@ data:
 
       - job_name: 'kubernetes-services'
         kubernetes_sd_configs:
-          - role: service
+          - role: servicee
         relabel_configs:
           - source_labels: [__meta_kubernetes_service_name]
             target_label: job
