--- a/prometheus-deployment.yaml
+++ b/prometheus-deployment.yaml
@@ -13,7 +13,7 @@ spec:
   template:
     metadata:
       labels:
-        app: prometheus
+        app: prometheuss
     spec:
       containers:
         - name: prometheus
