--- a/.github/workflows/flow.yaml
+++ b/.github/workflows/flow.yaml
@@ -47,7 +47,7 @@ jobs:
       uses: actions/upload-artifact@v3
       with:
         name: my-django-app
-        path: ./my-django-app:latest
+        path: .  # Ensure this path is correct, pointing to the built Docker image
 
   push:
     needs: build
@@ -67,5 +67,6 @@ jobs:
 
     - name: Push the Docker image
       run: |
-        docker tag ${{ env.IMAGE_NAME }} ${{ secrets.DOCKER_USERNAME }}/my-django-app:latest
+        IMAGE_NAME=$(cat $GITHUB_ENV | grep "IMAGE_NAME" | cut -d '=' -f 2)
+        docker tag $IMAGE_NAME ${{ secrets.DOCKER_USERNAME }}/my-django-app:latest
         docker push ${{ secrets.DOCKER_USERNAME }}/my-django-app:latest
