--- a/.github/workflows/flow.yaml
+++ b/.github/workflows/flow.yaml
@@ -67,5 +67,5 @@ jobs:
 
     - name: Push the Docker image
       run: 
-        docker tag my-django-app ${{ secrets.DOCKER_USERNAME }}/my-django-app:latest
+        docker tag my-django-app:latest ${{ secrets.DOCKER_USERNAME }}/my-django-app:latest
         docker push ${{ secrets.DOCKER_USERNAME }}/my-django-app:latest
