--- a/.github/workflows/flow.yaml
+++ b/.github/workflows/flow.yaml
@@ -41,7 +41,7 @@ jobs:
     - name: Build and tag the Docker image
       run: |
         docker build -t my-django-app:latest .
-       
+        echo "IMAGE_NAME=my-django-app:latest" >> $GITHUB_ENV
 
     - name: Save Docker image as an artifact
       uses: actions/upload-artifact@v3
@@ -65,7 +65,10 @@ jobs:
         username: ${{ secrets.DOCKER_USERNAME }}
         password: ${{ secrets.DOCKER_PASSWORD }}
 
+    - name: Set IMAGE_NAME from artifact
+      run: echo "IMAGE_NAME=my-django-app:latest" >> $GITHUB_ENV
+
     - name: Push the Docker image
-      run: 
-        docker tag my-django-app ${{ secrets.DOCKER_USERNAME }}/my-django-app:latest
+      run: |
+        docker tag my-django-app:latest ${{ secrets.DOCKER_USERNAME }}/my-django-app:latest
         docker push ${{ secrets.DOCKER_USERNAME }}/my-django-app:latest
