--- a/.github/workflows/flow.yaml
+++ b/.github/workflows/flow.yaml
@@ -6,7 +6,7 @@ on:
       - main
 
 jobs:
-  build:
+  build-and-push:
     runs-on: ubuntu-latest
 
     steps:
@@ -41,32 +41,8 @@ jobs:
     - name: Build and tag the Docker image
       run: |
         docker build -t my-django-app:latest .
-        echo "IMAGE_NAME=my-django-app:latest" >> $GITHUB_ENV
 
-    - name: Save Docker image as an artifact
-      uses: actions/upload-artifact@v3
-      with:
-        name: my-django-app
-        path: ./my-django-app:latest
-
-  push:
-    needs: build
-    runs-on: ubuntu-latest
-
-    steps:
-    - name: Download Docker image artifact
-      uses: actions/download-artifact@v3
-      with:
-        name: my-django-app
-
-    - name: Log in to Docker Hub
-      uses: docker/login-action@v2
-      with:
-        username: ${{ secrets.DOCKER_USERNAME }}
-        password: ${{ secrets.DOCKER_PASSWORD }}
-
-    - name: Tag and Push the Docker image
+    - name: Push the Docker image
       run: |
-        IMAGE_NAME=my-django-app:latest
-        docker tag $IMAGE_NAME ${{ secrets.DOCKER_USERNAME }}/my-django-app:latest
+        docker tag my-django-app:latest ${{ secrets.DOCKER_USERNAME }}/my-django-app:latest
         docker push ${{ secrets.DOCKER_USERNAME }}/my-django-app:latest
